# django-sensor

./: .gitignore  README.md
api/: manage.py  pyproject.toml
api/django_sensor/: asgi.py  settings.py  urls.py  wsgi.py
api/home/: views.py
api/home/templates/: home.html
api/sensors/: .secrets.py  models.py  tests.py  views.py
api/sensors/migrations/: 0001_initial.py  0002_auto_20200910_0040.py  0003_auto_20200923_2105.py  0004_auto_20200923_2114.py  0005_auto_20210609_0218.py
config/: README.md  gunicorn.service  nginx-site
esp32bme680/: esp32bme680.ino
esp32dht22/: esp32dht22.ino
esptemps/: esptemps.ino
